--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>CAR Island - School Project</title>
+  </head>
+  <body>
+    <p>This is the basis for car island</p>
+  </body>
+  <footer>CAR ISLAND RIGHTS RESERVED</footer>
+</html>
