--- a/CarIsland-about.html
+++ b/CarIsland-about.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Car Island About</title>
+    <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <body>
     <header>
