--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CAR Island - School Project</title>
+    <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <body>
     <p>This is the basis for car island</p>
