--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <title>CAR Island - School Project</title>
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
+  <header>
+
+  </header>
   <body>
     <p>This is the basis for car island</p>
   </body>
-  <footer>CAR ISLAND RIGHTS RESERVED</footer>
+  <footer>
+    <a href = 'index.html'>Home</a>
+    <a href = 'CarIsland-about.html'>About</a>
+    <a href = 'CarIsland-contacts.html'>Contact Us</a>
+    <a href = 'CarIsland-cats.html' ><img src="https://static.wikitide.net/garn47wiki/2/20/NewCarTransparent.png" class="car"></a>
+    <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
+
+  </footer>
 </html>
