--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href = 'index.html'>Home</a>
     <a href = 'CarIsland-about.html'>About</a>
     <a href = 'CarIsland-contacts.html'>Contact Us</a>
-    <a href = 'CarIsland-cats.html' ><img src="https://static.wikitide.net/garn47wiki/2/20/NewCarTransparent.png" class="car"></a>
+    <a href = 'CarIsland-cats.html' ><img src="https://static.wikitide.net/garn47wiki/2/20/NewCarTransparent.pnghttps://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
 
   </footer>
