--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   </header>
   <body>
-    <p>This is the basis for car island</p>
+    <p>Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
   </body>
   <footer>
     <a href = 'index.html'>Home</a>
