--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <p>Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
   </body>
   <footer>
-    <a href = 'index.html'>Home</a>
-    <a href = 'CarIsland-about.html'>About</a>
-    <a href = 'CarIsland-contacts.html'>Contact Us</a>
-    <a href = 'CarIsland-cats.html' ><img src="https://static.wikitide.net/garn47wiki/2/20/NewCarTransparent.pnghttps://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
+    <a href = 'index.html' class = "footerText">Home</a>
+    <a href = 'CarIsland-about.html' class = "footerText">About</a>
+    <a href = 'CarIsland-contacts.html' class = "footerText">Contact Us</a>
+    <a href = 'CarIsland-cats.html'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
-
   </footer>
 </html>
