--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <p>Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
   </body>
   <footer>
-    <a href = 'index.html' class = "footerText">Home</a>
-    <a href = 'CarIsland-about.html' class = "footerText">About</a>
-    <a href = 'CarIsland-contacts.html' class = "footerText">Contact Us</a>
-    <a href = 'CarIsland-cats.html'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
+    <div class="footerLinks">
+      <a href = 'index.html' class = "footerText"><strong>Home</strong></a>
+      <a href = 'CarIsland-about.html' class = "footerText"><strong>About</strong></a>
+      <a href = 'CarIsland-contacts.html' class = "footerText"><strong>Contact</strong></a>
+      <a href = 'CarIsland-attractions.html' class = "footerText"><strong>Attractions</strong></a>
+    </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
+  <a href = 'CarIsland-cats.html'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
+  <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
 </html>
