--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <header>
-
+    <img scr=""> <h1>Cat Island</h1>
   </header>
   <body>
     <p>Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
