Changed Index and Css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <header>
-    <img scr=""> <h1>Cat Island</h1>
+    <img scr="">
+    <h1>Cat Island</h1>
   </header>
   <body>
     <p>Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
+    <div id = 'photoGallery'>
+      <img src = '' class = 'carousel-image active' alt = ''>
+      <img src="https://www.slate.com/content/dam/slate/blogs/atlas_obscura/2014/05/15/tashirojima_is_an_island_in_japan_ruled_by_cats/9799296104_6bbe4f73b4_b.jpg.CROP.promo-large.jpg" class = 'carousel-image' alt = 'Very Defined Lad'>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiESs2mghtDsmzQMAKsijbcfgpXxLaWp1XMw&s" class = 'carousel-image' alt = 'Car Surprised'>
+    </div>
   </body>
   <footer>
     <div class="footerLinks">
