--- a/index.html
+++ b/index.html
@@ -28,4 +28,5 @@
   </footer>
   <a href = 'CarIsland-cats.html'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
   <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
+  <script src = "CarIsland.js"></script>
 </html>
