--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
       <img src="https://www.slate.com/content/dam/slate/blogs/atlas_obscura/2014/05/15/tashirojima_is_an_island_in_japan_ruled_by_cats/9799296104_6bbe4f73b4_b.jpg.CROP.promo-large.jpg" class = 'carousel-image' alt = 'Very Defined Lad'>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiESs2mghtDsmzQMAKsijbcfgpXxLaWp1XMw&s" class = 'carousel-image' alt = 'Car Surprised'>
     </div>
+    <p>Cats are wonderful creatures, shy in nature but great companions to have in your house. Here on Tashirojima you can see and pet many stray cats all welcome to the attention. This Island is one where if you sit somewhere, you will be surrounded by cats in minutes.</p>
   </body>
   <footer>
     <div class="footerLinks">
       <a href = 'index.html' class = "footerText"><strong>Home</strong></a>
       <a href = 'CarIsland-about.html' class = "footerText"><strong>About</strong></a>
-      <a href = 'CarIsland-contacts.html' class = "footerText"><strong>Contact</strong></a>
+      <a href = 'CarIsland-contact.html' class = "footerText"><strong>Contact</strong></a>
       <a href = 'CarIsland-attractions.html' class = "footerText"><strong>Attractions</strong></a>
     </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
