--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Cat Island</h1>
   </header>
   <body>
-    <p>Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
+    <p class = "mainHeaderText">Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
     <div id = 'photoGallery'>
       <img src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVsBAx5NB7jBTHd1RvYO6036_LYxeGqU-lGQ&s' class = 'carousel-image active' alt = 'Another Defined lad'>
       <img src="https://www.slate.com/content/dam/slate/blogs/atlas_obscura/2014/05/15/tashirojima_is_an_island_in_japan_ruled_by_cats/9799296104_6bbe4f73b4_b.jpg.CROP.promo-large.jpg" class = 'carousel-image' alt = 'Very Defined Lad'>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiESs2mghtDsmzQMAKsijbcfgpXxLaWp1XMw&s" class = 'carousel-image' alt = 'Car Surprised'>
     </div>
-    <p>Cats are wonderful creatures, shy in nature but great companions to have in your house. Here on Tashirojima you can see and pet many stray cats all welcome to the attention. This Island is one where if you sit somewhere, you will be surrounded by cats in minutes.</p>
+    <p class = "mainText">Cats are wonderful creatures, shy in nature but great companions to have in your house. Here on Tashirojima you can see and pet many stray cats all welcome to the attention. This Island is one where if you sit somewhere, you will be surrounded by cats in minutes.</p>
   </body>
   <footer>
     <div class="footerLinks">
