--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <header>
-    <img scr="">
+    <img scr="https://cdn.theatlantic.com/media/img/photo/2015/03/aoshima-japans-cat-island/c01_RTR4RUGT-1/original.jpg">
     <h1>Cat Island</h1>
   </header>
   <body>
