--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <header>
-    <img scr="https://cdn.theatlantic.com/media/img/photo/2015/03/aoshima-japans-cat-island/c01_RTR4RUGT-1/original.jpg">
+    <img src='https://img.goodfon.com/original/2048x1152/4/35/cat-island-japan-animals.jpg' class = 'headerKitties' alt = 'Kitties'>
     <h1>Cat Island</h1>
   </header>
   <body>
     <p class = "mainHeaderText">Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
     <div id = 'photoGallery'>
-      <img src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVsBAx5NB7jBTHd1RvYO6036_LYxeGqU-lGQ&s' class = 'carousel-image active' alt = 'Another Defined lad'>
+      <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVsBAx5NB7jBTHd1RvYO6036_LYxeGqU-lGQ&s' class = 'carousel-image active' alt = 'Another Defined lad'>
       <img src="https://www.slate.com/content/dam/slate/blogs/atlas_obscura/2014/05/15/tashirojima_is_an_island_in_japan_ruled_by_cats/9799296104_6bbe4f73b4_b.jpg.CROP.promo-large.jpg" class = 'carousel-image' alt = 'Very Defined Lad'>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiESs2mghtDsmzQMAKsijbcfgpXxLaWp1XMw&s" class = 'carousel-image' alt = 'Car Surprised'>
     </div>
