--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <header>
-    <img src='https://img.goodfon.com/original/2048x1152/4/35/cat-island-japan-animals.jpg' class = 'headerKitties' alt = 'Kitties'>
+    <img src='https://static01.nyt.com/images/2019/10/01/science/00SCI-CATS1/00SCI-CATS1-videoSixteenByNineJumbo1600-v2.jpg' class = 'headerKitties' alt = 'Kitties'>
     <h1>Cat Island</h1>
   </header>
   <body>
