--- a/CarIsland-about.html
+++ b/CarIsland-about.html
@@ -2,26 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Car Island About</title>
+    <title>CAR Island About</title>
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
   <body>
     <header>
-
+      About Car Island's Website
     </header>
     <main>
+      <p>This Vacation webpage is a simple project for a project that 3 Highschool students were set to work on. We chose this out of the it being what we agreed on (And it being an actual habitable place.)</p>
+      <p> The reason for this island being Car island is due to a funny little game that was made in blender called Garn47, this game one of us really enjoys and a lot of the people in our class happen to love this creature known as Car. (See in bottom right) </p>
+      <p>This island has the nickname of Cat Island due to the population of cats outnumbering actual people living there. The funny part is the cats love people and will generally flock to them if they want attention. The actual name of this island is the Tashirojima island off the East of Japan and is has a fairly low population.</p>
+
+
 
     </main>
-  </body>
-  <footer>
-    <div class="footerLinks">
-      <a href = 'index.html' class = "footerText"><strong>Home</strong></a>
-      <a href = 'CarIsland-about.html' class = "footerText"><strong>About</strong></a>
-      <a href = 'CarIsland-contacts.html' class = "footerText"><strong>Contact</strong></a>
-      <a href = 'CarIsland-attractions.html' class = "footerText"><strong>Attractions</strong></a>
-    </div>
+    <footer>
+      <div class="footerLinks">
+        <a href = 'index.html' class = "footerText"><strong>Home</strong></a>
+        <a href = 'CarIsland-about.html' class = "footerText"><strong>About</strong></a>
+        <a href = 'CarIsland-contact.html' class = "footerText"><strong>Contact</strong></a>
+        <a href = 'CarIsland-attractions.html' class = "footerText"><strong>Attractions</strong></a>
+      </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
   <a href = 'CarIsland-cats.html'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
   <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
+    <script src = "CarIsland.js"></script>
+  </body>
 </html>
