--- a/CarIsland-about.html
+++ b/CarIsland-about.html
@@ -14,7 +14,7 @@
       <p> The reason for this island being Called Car island by us is due to a funny little game that was made in blender called Garn47, this game one of us really enjoys and a lot of the people in our class happen to love this creature known as Car. (See in bottom right) </p>
       <p>This island has the nickname of Cat Island due to the population of cats outnumbering actual people living there. The funny part is the cats love people and will generally flock to them if they want attention. The actual name of this island is the Tashirojima island off the East of Japan and it has a fairly low population.</p>
 
-
+    <p>*Insert Image of Timothy, Wesley, and Vincent beating up Camden</p>
 
     </main>
     <footer>
