--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </header>
   <body>
     <p class = "mainHeaderText">Car Island is a small island off the eastern side of Japan. It is also known as Tashirojima, the Cat Island of Japan.</p>
+    <br>
     <div id = 'photoGallery'>
       <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVsBAx5NB7jBTHd1RvYO6036_LYxeGqU-lGQ&s' class = 'carousel-image active' alt = 'Another Defined lad'>
       <img src="https://www.slate.com/content/dam/slate/blogs/atlas_obscura/2014/05/15/tashirojima_is_an_island_in_japan_ruled_by_cats/9799296104_6bbe4f73b4_b.jpg.CROP.promo-large.jpg" class = 'carousel-image' alt = 'Very Defined Lad'>
@@ -27,7 +28,8 @@
     </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
-  <a href = 'CarIsland-cats.html'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
+  <a id='carImage'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
   <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
+  <p class="carDialogText" id="carDialogText"></p>
   <script src = "CarIsland.js"></script>
 </html>
