--- a/CarIsland-attractions.html
+++ b/CarIsland-attractions.html
@@ -7,21 +7,21 @@
   </head>
   <body>
     <header>
-      <p>Car Island Attractions</p>
+      <h2>Car Island Attractions</h2>
     </header>
     <main>
       <p> Car Island has a handful of attractions but due to it being a smaller island off the coast of Japan, you may think it doesn't have a lot. Despite that fact, it has a kind population of people and cats to show you around the island.</p>
-      <h2> The Cats </h2>
+      <h3> The Cats </h3>
       <p>This is cat Island, there are plenty of friendly cats that you can always go through and pet, if you just simply sit around, you can be surrounded by cats in minutes.</p>
       <img src = "" alt = "Image containing various Cats of Cat Island">
       <br>
-      <h2> The Cat Shrine </h2>
+      <h3> The Cat Shrine </h3>
       <p>In the Center Cat Island there is a cat-sized cat shrine that was built to honor a cat who was accidentally killed by a falling rock.</p>
       <img src = "" alt = "Image of the Cat-sized Cat Shrine in the center of Tashirojima">
       <br>
-      
 
-      
+
+
     </main>
   </body>
   <footer>
