--- a/CarIsland-about.html
+++ b/CarIsland-about.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      About Car Island's Website
+      <h2>About Car Island's Website</h2>
     </header>
     <main>
       <p>This Vacation webpage is a simple project for a project that 3 Highschool students were set to work on. We chose this out of the it being what we agreed on (And it being an actual habitable place.)</p>
