Fixed all Footers

--- a/CarIsland-cats.html
+++ b/CarIsland-cats.html
@@ -17,11 +17,13 @@
     <div class="footerLinks">
       <a href = 'index.html' class = "footerText"><strong>Home</strong></a>
       <a href = 'CarIsland-about.html' class = "footerText"><strong>About</strong></a>
-      <a href = 'CarIsland-contacts.html' class = "footerText"><strong>Contact</strong></a>
+      <a href = 'CarIsland-contact.html' class = "footerText"><strong>Contact</strong></a>
       <a href = 'CarIsland-attractions.html' class = "footerText"><strong>Attractions</strong></a>
     </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
-  <a href = 'CarIsland-cats.html'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
+  <a id='carImage'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
   <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
+  <p class="carDialogText" id="carDialogText"></p>
+  <script src = "CarIsland.js"></script>
 </html>
