--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
-  <a id='carImage'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
+  <a id='carImageButton'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car" id='carImage'></a>
   <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
   <p class="carDialogText" id="carDialogText"></p>
   <script src = "CarIsland.js"></script>
