--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
+  <img src="https://media.tenor.com/dr6HHZLcydcAAAAj/police-car-car-crash.gif" alt="explosion" class="explosion">
   <a id='carImageButton'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car" id='carImage'></a>
   <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
   <p class="carDialogText" id="carDialogText"></p>
