Fixed Footer and applied to all pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href = 'CarIsland-about.html' class = "footerText"><strong>About</strong></a>
       <a href = 'CarIsland-contact.html' class = "footerText"><strong>Contact</strong></a>
       <a href = 'CarIsland-attractions.html' class = "footerText"><strong>Attractions</strong></a>
+      <a href = 'CarIsland-Cats.html' class = "footerText"><strong>Cats</a>
     </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
