--- a/CarIsland-about.html
+++ b/CarIsland-about.html
@@ -23,10 +23,12 @@
       <a href = 'CarIsland-about.html' class = "footerText"><strong>About</strong></a>
       <a href = 'CarIsland-contact.html' class = "footerText"><strong>Contact</strong></a>
       <a href = 'CarIsland-attractions.html' class = "footerText"><strong>Attractions</strong></a>
+      <a href = 'CarIsland-Cats.html' class = "footerText"><strong>Cats</a>
     </div>
     <p class="rightsReserved">CAR ISLAND RIGHTS RESERVED</p>
   </footer>
-  <a id='carImage'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car"></a>
+  <img src="https://media.tenor.com/dr6HHZLcydcAAAAj/police-car-car-crash.gif" alt="explosion" class="explosion">
+  <a id='carImageButton'><img src="https://static.wikia.nocookie.net/garn47/images/f/f8/Car_fluff.png/revision/latest/scale-to-width/360?cb=20240810200531" class="car" id='carImage'></a>
   <p class="carReactionText">LIVE <strong>CAR</strong> REACTION</p>
   <p class="carDialogText" id="carDialogText"></p>
   <script src = "CarIsland.js"></script>
