--- a/CarIsland-contact.html
+++ b/CarIsland-contact.html
@@ -7,10 +7,24 @@
   </head>
   <body>
     <header>
-
+<p>How to Contact us</p>
     </header>
     <main>
+<h1>Instragram</h1>
+  <h2>http://www.Instagram.com/</h2>
 
+<h1>Facebook</h1>
+  <h2>http://www.facebook.com/</h2>
+
+<h1>Discord</h1>
+  <h2>http://www.discord.com/</h2>
+
+<h1>Email</h1>
+  <h2>catfilledislandJ@gmail.com</h2>
+
+<h1>Phone</h1>
+  <h2>0225-95-1111</h2>
+  
     </main>
   </body>
   <footer>
