--- a/CarIsland-cats.html
+++ b/CarIsland-cats.html
@@ -5,12 +5,13 @@
     <title>Car Island Cats</title>
     <link href = 'CarIsland.css' rel = 'stylesheet'>
   </head>
-  <body>
+    <body>
     <header>
-
+<h1> Cats </h1>
     </header>
     <main>
-
+      <p>Here is an image of the cats you will see on Cat Island</p>
+<img src="https://live.staticflickr.com/4367/36343757640_1c41e3d6e7_b.jpg" alt="Cats doing a drug deal">
     </main>
   </body>
   <footer>
