added a paragraph to cats page

--- a/CarIsland-cats.html
+++ b/CarIsland-cats.html
@@ -12,6 +12,7 @@
     <main>
       <p>Here is an image of the cats you will see on Cat Island</p>
 <img src="https://live.staticflickr.com/4367/36343757640_1c41e3d6e7_b.jpg" alt="Cats doing a drug deal">
+<br><p>There are many lovely cats that live here on the island and you can meet all of them when you come down to Tashirojima</p>
     </main>
   </body>
   <footer>
